[project]
name = "Lumina Research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "beautifulsoup4>=4.14.3",
    "html5lib>=1.1",
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-groq>=1.1.2",
    "langchain-mistralai>=1.1.3",
    "langchain-ollama>=1.1.0",
    "langchain-tavily>=0.2.18",
    "lxml>=6.1.0",
    "orjson>=3.11.8",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "streamlit>=1.57.0",
    "tavily-python>=0.7.24",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
    "trafilatura>=2.0.0",
]
